--- a/part0/04.md
+++ b/part0/04.md
@@ -56,5 +56,5 @@
         activate server
         server-->>browser: [{ "content": "HTML is easy", "date": "2024-6-20" }, ... ]
         deactivate server
-        Note right of browser: The browser executes the callback function that renders the notes
+        Note right of browser: The browser executes the callback function that renders the notes, including the new one
 ```
