--- a/part0/04.md
+++ b/part0/04.md
@@ -33,7 +33,7 @@
         server-->>browser: HTML document
         deactivate server
         Note right of browser: The browser sends the HTTP POST request to the new_note server address
-        Note right of server: The server responds with a 302 status, which asks the brwoser to perform a new HTTP GET request
+        Note right of server: The server responds with a 302 status, which asks the browser to perform a new HTTP GET request
 
         browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
         activate server
