--- a/part0/06.md
+++ b/part0/06.md
@@ -7,5 +7,5 @@
         deactivate server
     
         Note right of browser: The browser sends the HTTP POST request to the new_note_spa server address (the new note is included in the request in JSON format)
-        Note right of server: The server responds with the 201 status (note created) and doesn't trigger any redirect nor HTTP requests, the note gets added
+        Note right of server: The server responds with the 201 status (note created) and doesn't trigger any redirect nor HTTP requests
 ```
